<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/box_checker_header_text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:gravity="center"
        android:padding="@dimen/linear_layout_padding"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/checkbox_one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_one_title_text"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tick_here" />

        <TextView
            android:id="@+id/box_one_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="@string/box_one_unchecked_text" />

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/linear_layout_padding"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/checkbox_two_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_two_title_text"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tick_here" />

        <TextView
            android:id="@+id/box_two_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="@string/box_two_unchecked_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>